# substrate-risc0

./: Cargo.toml  README.md
node/pallets/template/: Cargo.toml
node/pallets/template/src/: lib.rs
node/runtime/: Cargo.toml
node/runtime/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: common.rs  lib.rs  risc0.rs
prover/host/: Cargo.toml  metadata.scale
prover/host/src/: main.rs
prover/methods/guest/: Cargo.toml
provers/factors/: README.md
provers/factors/factors/: Cargo.toml  metadata.scale
provers/factors/factors/src/: main.rs
provers/factors/methods/: Cargo.toml
provers/factors/methods/guest/: Cargo.toml
provers/wasm/factors/: Cargo.toml
provers/wasm/factors/src/: main.rs
provers/wasm/methods/: Cargo.toml
provers/wasm/methods/guest/: Cargo.toml
