[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.19.1" }
env_logger = "0.10"
serde = "1.0"
subxt = { version = "0.31.0" }
subxt-signer = { version = "0.31.0", features = ["subxt"] }
tokio = { version = "1", features = ["full"] }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
serde_json = "1.0.96"
