[package]
name = "starter"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = {  version = "0.14.0", git = "https://github.com/risc0/risc0" }
# serde = "1.0"
# tokio = { version = "1", features = ["full"] }
# subxt = { version = "0.25.0" }
# codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
# sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
# sp-std = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
# array-bytes = "6.0.0"
