[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = {  version = "0.14.0", git = "https://github.com/risc0/risc0" }

[dependencies]
risc0-zkvm = {  version = "0.14.0", git = "https://github.com/risc0/risc0", default-features = false }
wat = "1.0.61"
wasmi = { version = "0.29.0", default-features = false }
externc-libm = { git = "https://github.com/HaruxOS/externc-libm" }

[features]
default = ["std"]
std = [
"wasmi/std",
"risc0-zkvm/std"
]

